# Hashing

./: .LICENSE.swp  .gitignore  LICENSE  README.md  pyproject.toml
src/: test_hashing.py
src/kraken_alt_hash/: hashing.py  kmer2hash.py  kmer_infer.py  kmer_split.py  master_script.py
src/my_package.egg-info/: SOURCES.txt
tests/: test.core.py
